# pwrs

./: .rosinstall  README.md  pwrs.rosinstall
arduino/ackermann/: ackermann.ino
arduino/imu/: MPU9250.cpp  MPU9250.h  imu.ino  quaternionFilters.cpp
arduino/killswitch/relay/: relay.ino
arduino/killswitch/remote/: remote.ino
arduino/libraries/pwrs/: Encoder.cpp  Encoder.h  MotorController.cpp  MotorController.h  ServoSteering.cpp  ServoSteering.h  SonarRanging.cpp  SonarRanging.h  StepperSteering.cpp  StepperSteering.h  library.properties
prototype/BigBrain/: BigBrain.sln
prototype/BigBrain/BigBrain/: BigBrain.csproj  BigBrain.csproj.old  FirmataDriveController.cs  Package.appxmanifest  StartupTask.cs  project.lock.json
prototype/BigBrain/BigBrain/Properties/: AssemblyInfo.cs
prototype/BigBrainApp/: App.xaml  App.xaml.cs  BigBrainApp.csproj  BigBrainApp_TemporaryKey.pfx  FirmataDriveController.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  RemoteControl.cs  StepperController.cs
prototype/BigBrainApp/Properties/: AssemblyInfo.cs
prototype/LittleBrain1/: LittleBrain1.ino
prototype/LittleBrainTest/: LittleBrainTest.ino
pwrs/: CMakeLists.txt  package.xml
pwrs_controller/: CMakeLists.txt  package.xml
pwrs_controller/nodes/: Calibration.xlsx  calibration.py
pwrs_controller/src/drivesim/: CMakeLists.txt  main.cpp
pwrs_controller/src/joystick/: CMakeLists.txt  main.cpp
pwrs_controller/src/teleop_ackermann/: CMakeLists.txt  main.cpp
pwrs_controller/src/wiggler/: CMakeLists.txt  main.cpp
pwrs_description/: CMakeLists.txt  package.xml
pwrs_description/launch/: arduino.launch  calibration.launch  joystick.launch  rc.launch  sim.launch  sim.rviz  spongebot.launch  spongebot.rviz
pwrs_description/urdf/: CarBody.stl  CarTyre_left.stl  CarTyre_right.stl  spongebot.urdf.xacro
pwrs_diagnostics/: CMakeLists.txt  package.xml
pwrs_diagnostics/app_insights/src/core/common/: Common.h
pwrs_diagnostics/include/: serializer.h
pwrs_diagnostics/src/: serializer.cpp  serializer_node.cpp
pwrs_slam/: CMakeLists.txt  package.xml
